<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:layout_gravity="center"
    android:background="@drawable/background_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:weightSum="3"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/category"
            android:textAlignment="center"
            android:textColor="@color/purple_800"
            android:textSize="35dp"
            android:textStyle="bold" />

        <Button
            android:layout_weight="1"
            android:id="@+id/semester_wise_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/round_primary"
            android:text="@string/semester_wise"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <Button
            android:layout_weight="1"
            android:layout_marginTop="20dp"
        android:id="@+id/course_wise_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:textAlignment="center"
        android:background="@drawable/round_primary"
        android:text="@string/course_wise"
        android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
        android:textSize="18dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </LinearLayout>

</ScrollView>