<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SemesterWiseActivity"
    android:orientation="vertical">

    <TextView
        android:background="@drawable/round_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_semester_gpa_and_credit_list"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:background="@drawable/round_primary"
        android:padding="10dp"
        android:drawableRight="@drawable/ic_baseline_add"
        android:layout_marginLeft="20dp"/>

            <Button
                android:id="@+id/button_submit_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_list"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:background="@drawable/round_primary"
                android:padding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

        </LinearLayout>

    </LinearLayout>

    </ScrollView>
</LinearLayout>